--- a/src/vistas/tabla.fxml
+++ b/src/vistas/tabla.fxml
@@ -6,7 +6,6 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-image: url(recursos/fondo.jpeg);" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controladoras.Controladora_Tabla">
    <center>
       <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
@@ -24,11 +23,11 @@
             <JFXTextField promptText=" Selecciona un modulo" />
             <JFXTextField promptText="Seleciona una asignatura" GridPane.rowIndex="1" />
             <JFXTextField promptText="Nombre a filtrar" GridPane.rowIndex="2" />
-            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" GridPane.rowSpan="2">
+            <TableView fx:id="tabla" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" GridPane.rowSpan="2">
               <columns>
-                  <TableColumn prefWidth="75.0" text="Nombre" />
-                <TableColumn prefWidth="75.0" text="Apellido" />
-                <TableColumn prefWidth="75.0" text="Correo" />
+                  <TableColumn fx:id="tNombre" prefWidth="75.0" text="Nombre" />
+                <TableColumn fx:id="tApellido" prefWidth="75.0" text="Apellido" />
+                <TableColumn fx:id="tCorreo" prefWidth="75.0" text="Correo" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
